# cex

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Sanitizers.cmake
include/cex/: book.hpp  id.hpp  log.hpp  metrics.hpp  time.hpp  tracing.hpp
src/: CMakeLists.txt
src/core/: book.cpp  time.cpp
src/main/: cex_main.cpp
src/util/: log.cpp  metrics_null.cpp  tracing.cpp
tests/: CMakeLists.txt
tests/perf/: bench_update.cpp
tests/unit/: test_time.cpp
